2009-03-16  Karl Berry  <karl@gnu.org>

	* doc/info-stnd.texi, doc/info.texi: update to GFDLv1.3+.

2009-03-15  Karl Berry  <karl@gnu.org>

	* util/texi2dvi (run_tex): allow ~ in top-level filename.
	in tidy mode, also make the clean dirname link if a ~ is present.
	Continuing report from Norbert Preining, 13 Mar 2009 14:18:11,
	Debian bug#487974.

2009-03-14  Karl Berry  <karl@gnu.org>

	* info/filesys.c (compress_suffixes): add .xz/unxz.

	* info/filesys.h (DEFAULT_INFOPATH): include PATH by default.

2009-03-14  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* info/filesys.c (build_infopath_from_path): new fn.
	(info_add_path): if INFOPATH includes the word "PATH",
	call the new fn.
	* doc/info-stnd.texi (Invoking Info) <directory-path>: document it.

2009-02-07  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Not Ending a Sentence): also mention ).

2009-01-31  Karl Berry  <karl@gnu.org>

	* autogen.sh: No need for --enable-maintainer-mode any more.

2009-01-23  Sergey Poznyakoff  <gray@gnu.org.ua>

	Fix behavior of info on invalid regular expressions.
	
	* info/search.h (search_result): New enum.
	(search, regexp_search):
	(search_forward, search_backward): Return enum search_result.
	* info/search.c (search, regexp_search):
	(search_forward, search_backward): Return enum search_result.
	All callers updated.
	* info/session.c (info_search_in_node_internal): Return enum
	search_result. All callers updated.
	(info_search_internal): Stop immediately if the search returns
	search_failure. This happens if the user specified an invalid
	regular expression.
	
	* info/dir.c, info/info-utils.c, info/man.c, info/nodes.c: Update
	uses of search functions.

2009-01-18  Karl Berry  <karl@gnu.org>

        * doc/texinfo.tex (\headitemfont): new macro, synonym for @b.
	* doc/texinfo.txi (Multitable Rows): document @headitemfont.
	Suggestion from wl, 21 Oct 2008 09:02:51.

	* doc/texinfo.tex (\doitemize): try typesetting the item mark,