@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.189 2009-03-16 12:41:57 karl Exp $
+$Id: NEWS,v 1.190 2009-03-20 17:36:55 karl Exp $
 This NEWS file records noteworthy changes, very tersely.
 See the manual for detailed information.
 
@@ -29,6 +29,12 @@ one of the relevant sections:
   . new diacritic command @ogonek.
   . DEL (0x7f = 0177 = 127) is a true comment character (catcode 14 in TeX).
 
+* texinfo.tex:
+  . support some per-language hyphenation, when the underlying TeX
+    engine does (for instance, etex/pdfetex from TeX Live 2008).  Words
+    with accented letters are still not handled properly.
+  . new Icelandic translation: txi-is.tex.
+
 * info:
   . INFOPATH is determined by PATH by default, or if an element "PATH"
     is specified.
@@ -36,11 +42,6 @@ one of the relevant sections:
 
 * install-info:
   . xz compression supported.
-
-* texinfo.tex:
-  . support some per-language hyphenation, when the underlying TeX
-    engine does (for instance, etex/pdfetex from TeX Live 2008).  Words
-    with accented letters are still not handled properly.
 
 * Distribution:
   . language support for no removed/renamed to nb, per Norwegian translators.
